@startuml
class com.zhouruxuan.behavioral.strategy.demo2.CreditCard {
- int amount
- String number
- String date
- String cvv
+ void setAmount(int)
+ int getAmount()
}
class com.zhouruxuan.behavioral.strategy.demo2.PayByCreditCard {
- BufferedReader READER
- CreditCard card
+ void collectPaymentDetails()
+ boolean pay(int)
- boolean cardIsPresent()
}
interface com.zhouruxuan.behavioral.strategy.demo2.PayStrategy {
~ boolean pay(int)
~ void collectPaymentDetails()
}
class com.zhouruxuan.behavioral.strategy.demo2.Order {
- int totalCost
- boolean isClosed
+ void processOrder(PayStrategy)
+ void setTotalCost(int)
+ int getTotalCost()
+ boolean isClosed()
+ void setClosed()
}

class com.zhouruxuan.behavioral.strategy.demo2.PayByPayPal {
- {static} Map<String,String> DATA_BASE
- BufferedReader READER
- String email
- String password
- boolean signedIn
+ void collectPaymentDetails()
- boolean verify()
+ boolean pay(int)
- void setSignedIn(boolean)
}

com.zhouruxuan.behavioral.strategy.demo2.Order ..> com.zhouruxuan.behavioral.strategy.demo2.PayStrategy
com.zhouruxuan.behavioral.strategy.demo2.PayStrategy <|.. com.zhouruxuan.behavioral.strategy.demo2.PayByCreditCard
com.zhouruxuan.behavioral.strategy.demo2.PayStrategy <|.. com.zhouruxuan.behavioral.strategy.demo2.PayByPayPal
com.zhouruxuan.behavioral.strategy.demo2.CreditCard <-- com.zhouruxuan.behavioral.strategy.demo2.PayByCreditCard
com.zhouruxuan.behavioral.strategy.demo2.CreditCard <-- com.zhouruxuan.behavioral.strategy.demo2.PayByPayPal
@enduml